KThinkBat 0.1.5 Beta 1:
   * Support a second battery
   * change gauge fill color, if battery reached its alarm capacity

KThinkBat 0.1.5 Alpha 2:
   * prepared to display the current power consumption to the right 
     instead of below the battery gauge 
   * tp_smapi interface implemented
   * On Asus Laptops shows power consumption in 100 mA steps
   * Battery handling refactored into a separate class

KThinkBat 0.1.4:
   * Support for ASUS Laptops wich report values in mAh instead of 
     mWh in /proc/acpi/battery/BAT0 which fixes Bug #KTB001

KThinkBat 0.1.3:
   * Inital release after 3 month of personal using